--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,16 @@
       <artifactId>testng</artifactId>
       <version>7.9.0</version>
     </dependency>
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-java</artifactId>
+      <version>7.13.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-testng</artifactId>
+      <version>7.13.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
